--- a/test.html
+++ b/test.html
@@ -3,100 +3,46 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Expandable List Example</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-<style>
-  ul {
-    list-style-type: none;
-    padding-left: 0;
-  }
-  .sub-list {
-    display: none;
-    padding-left: 20px;
-  }
-  .active {
-    display: block !important;
-  }
-  .fa-plus:before {
-    content: "+";
-    margin-right: 5px;
-  }
-  .fa-minus:before {
-    content: "-";
-    margin-right: 5px;
-  }
-</style>
+<title>Cấu trúc khối đa cấp với jQuery</title>
+<link rel="stylesheet" href="./assets/css/addProject.css">
 </head>
 <body>
+<div class="container">
+    <div class="block block-level-1">Cấp Độ 1
+        <span class="add-button">+</span>
+        <span class="delete-button">-</span>
+        <div class="block block-level-2">Cấp Độ 2a
+            <span class="add-button">+</span>
+            <span class="delete-button">-</span>
+            <div class="block block-level-3">Cấp Độ 3a
+                <span class="add-button">+</span>
+                <span class="delete-button">-</span>
+                <div class="block block-level-4">Cấp Độ 4a</div>
+            </div>
+        </div>
+        <div class="block block-level-2">Cấp Độ 2b
+            <span class="add-button">+</span>
+            <span class="delete-button">Del</span>
+            <div class="block block-level-3">Cấp Độ 3b
+                <span class="add-button">+</span>
+                <span class="delete-button">Del</span>
+                <div class="block block-level-4">Cấp Độ 4b</div>
+            </div>
+        </div>
+        <div class="block block-level-2">Cấp Độ 2d
+            <span class="add-button">+</span>
+            <span class="delete-button">Del</span>
+            <div class="block block-level-3">Cấp Độ 3d
+                <span class="add-button">+</span>
+                <span class="delete-button">Del</span>
+                <div class="block block-level-4">Cấp Độ 4d</div>
+            </div>
+        </div>
+    </div>
+</div>
 
-<ul id="level1">
-  <li onclick="toggleSubList('level1')">
-    <i class="fas fa-plus"></i>
-    lv1
-    <ul class="sub-list" id="level1-sublist">
-      <li onclick="toggleSubList('level2')">
-        <i class="fas fa-plus"></i>
-        lv1.1
-        <ul class="sub-list" id="level2-sublist">
-          <li onclick="toggleSubList('level3')">
-            <i class="fas fa-plus"></i>
-            lv1.1.1
-            <ul class="sub-list" id="level3-sublist">
-              <li>lv1.1.1.1</li>
-              <li>lv1.1.1.2</li>
-              <li>lv1.1.1.3</li>
-              <li><input type="text" name="" id=""></li>
-            </ul>
-          </li>
-          <li>
-            <i class="fas fa-plus"></i>
-            lv1.1.2
-          </li>
-          <li>
-            <i class="fas fa-plus"></i>
-            lv1.1.3
-          </li>
-          <li><input type="text" name="" id=""></li>
-        </ul>
-      </li>
-      <li>
-        <i class="fas fa-plus"></i>
-        lv1.2
-      </li>
-      <li>
-        <i class="fas fa-plus"></i>
-        lv1.3
-      </li>
-      <li><input type="text" name="" id=""></li>
-    </ul>
-  </li>
-  <li>
-    <i class="fas fa-plus"></i>
-    lv2
-  </li>
-  <li>
-    <i class="fas fa-plus"></i>
-    lv3
-  </li>
-  <li><input type="text" name="" id=""></li>
-</ul>
-
-<script>
-  function toggleSubList(id) {
-    var sublist = document.getElementById(id + '-sublist');
-    var icon = sublist.previousElementSibling.querySelector('i');
-
-    if (sublist.classList.contains('active')) {
-      sublist.classList.remove('active');
-      icon.classList.remove('fa-minus');
-      icon.classList.add('fa-plus');
-    } else {
-      sublist.classList.add('active');
-      icon.classList.remove('fa-plus');
-      icon.classList.add('fa-minus');
-    }
-  }
-</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="./assets/js/test.js"></script>
 
 </body>
 </html>
