--- a/addProject.html
+++ b/addProject.html
@@ -76,15 +76,9 @@
         <!-- structure mockup -->
         <div class="structure-mockup hide">
             <div class="container">
-                <div class="block block-level-1">Cấp Độ 1
-                    <button class="add-button" data-level="2">Thêm</button>
-                    <div class="block block-level-2">Cấp Độ 2
-                        <button class="add-button" data-level="3">Thêm</button>
-                        <div class="block block-level-3">Cấp Độ 3
-                            <button class="add-button" data-level="4">Thêm</button>
-                            <div class="block block-level-4">Cấp Độ 4</div>
-                        </div>
-                    </div>
+                <div class="block-level-0">
+                    <span class="add-button">Thêm</span>
+                    
                 </div>
             </div>
             <div class="structure-bot">
