--- a/addProject.html
+++ b/addProject.html
@@ -89,7 +89,7 @@
         <!-- end structure mockup -->
 
         <!-- add device mockup -->
-        <div class="add-device-mockup hide">
+        <div class="add-device-mockup mockup hide">
             <div class="add-device-hd">
                 <span>Device</span>
             </div>
@@ -102,41 +102,7 @@
             <div><label for="">Ngày</label>
                 <input type="text" name="" id="ngay">
             </div>
-            <div>
-                <label for="lv1">lv1</label>
-                <select id="lv1" name="">
-                    <option value="nha 1">nhà 1</option>
-                    <option value="nha 2">nhà 2</option>
-                    <option value="nha 3">nhà 3</option>
-                    <option value="nha 4">nhà 4</option>
-                </select>
-            </div>
-            <div>
-                <label for="lv2">lv2</label>
-                <select id="lv2" name="">
-                    <option value="tang 1">tang 1</option>
-                    <option value="tang 2">tang 2</option>
-                    <option value="tang 3">tang 3</option>
-                    <option value="tang 4">tang 4</option>
-                </select>
-            </div>
-            <div>
-                <label for="lv3">lv3</label>
-                <select id="lv3" name="">
-                    <option value="phong 1">phong 1</option>
-                    <option value="phong 2">phong 2</option>
-                    <option value="phong 3">phong 3</option>
-                    <option value="phong 4">phong 4</option>
-                </select>
-            </div>
-            <div>
-                <label for="lv4">lv4</label>
-                <select id="lv4" name="">
-                    <option value="ban 1">ban 1</option>
-                    <option value="ban 2">ban 2</option>
-                    <option value="ban 3">ban 3</option>
-                    <option value="ban 4">ban 4</option>
-                </select>
+            <div class="device-lv">
             </div>
             <div>
                 <label for="loaitb">Loại thiết bị</label>
@@ -154,7 +120,7 @@
         <!-- end device mockup -->
 
         <!-- add chanel  mockup-->
-        <div class="add-chanel-mockup hide">
+        <div class="add-chanel-mockup mockup hide">
             <label for="chonch">Chọn chanel</label>
             <select id="chonch" name="chonch">
                 <option value="CH1">CH1</option>
@@ -237,7 +203,7 @@
     <script src="./assets/js/app.js"></script>
     <!-- <script src="./assets/js/script.js"></script> -->
     <script src="./assets/js/addproject.js"></script>
-
+    
 </body>
 
 </html>
