--- a/test.html
+++ b/test.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Read InnerText with JavaScript</title>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"
+integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
 </head>
 <body>
 
@@ -32,7 +35,7 @@
     </div>
 </div>
 
-<script>
+<!-- <script>
 document.addEventListener('DOMContentLoaded', function() {
     var jsonData = readInnerText(document.querySelector('.container')); // Đọc dữ liệu từ container và lưu vào biến jsonData
     console.log(jsonData); // In ra dữ liệu đã lưu
@@ -58,7 +61,8 @@ document.addEventListener('DOMContentLoaded', function() {
     console.log(jsonStructure);
     
 });
-</script>
+</script> -->
+<script src="./assets/js/test.js"></script>
 
 </body>
 </html>
