--- a/addProject.html
+++ b/addProject.html
@@ -120,7 +120,7 @@
         <!-- end device mockup -->
 
         <!-- add chanel  mockup-->
-        <div class="add-chanel-mockup mockup hide">
+        <div class="add-chanel-mockup hide">
             <label for="chonch">Chọn chanel</label>
             <select id="chonch" name="chonch">
                 <option value="CH1">CH1</option>
