--- a/addProject.html
+++ b/addProject.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=chanel -width, initial-scale=1.0">
+    <meta name="viewport" content="width=channel -width, initial-scale=1.0">
     <title>Document</title>
     <link rel="shortcut icon" href="./assets/svg/favicon.svg" type="image/x-icon">
     <link rel="shortcut icon"
@@ -52,8 +52,8 @@
                             Device</span>
                         <span class="delete-device-btn" data-info="123"><i class="fa-solid fa-trash"></i> Delete
                             Device</span>
-                        <span class="add-chanel-btn" style="margin-right:10px" data-info="123" data-maxch="6" data-type="6k3p"><i
-                                class="fa-solid fa-plus"></i> Add Chanel</span>
+                        <span class="add-channel-btn" style="margin-right:10px" data-info="123" data-maxch="6" data-type="6k3p"><i
+                                class="fa-solid fa-plus"></i> Add channel</span>
                         <i class="fa-solid fa-caret-down" data-info="123"></i>
                     </div>
                     <table class="table table-lg 123 hide">
@@ -70,7 +70,7 @@
                                 <td class="text-bold-500">0</td>
                                 <td>abcsd</td>
                                 <td>A11</td>
-                                <td class="delete-chanel-btn">xóa</td>
+                                <td class="delete-channel-btn">xóa</td>
                             </tr>
                         </tbody>
                     </table> -->
@@ -123,10 +123,10 @@
         </div>
         <!-- end device mockup -->
 
-        <!-- add chanel  mockup-->
-        <div class="add-chanel-mockup mockup hide">
+        <!-- add channel  mockup-->
+        <div class="add-channel-mockup mockup hide">
             <div class="chonch">
-                <label for="chonch">Chọn chanel</label>
+                <label for="chonch">Chọn channel</label>
             </div>
             <div><label>Itt</label>
                 <input type="text" name="itt" id="">
@@ -143,23 +143,23 @@
             <div><label>Name</label>
                 <input type="text" name="name" id="">
             </div>
-            <div><label>Source</label>
-                <input type="text" name="source" id="">
+            <div><label>SourceFr</label>
+                <input type="text" name="sourceFr" id="">
             </div>
-            <div class="chanel-lv">  
+            <div class="channel-lv">  
             </div>
             <div class="checkbox">
                 <label style="margin-right: 10px;">includeS</label>
                 <input type="checkbox" id="includeS" name="checkbox">
                 <label style="margin:0 10px;">includeL</label>
                 <input type="checkbox" id="includeL" name="checkbox">
-                <label style="margin:0 10px;">SourceFr</label>
-                <input type="checkbox" id="sourceFr" name="checkbox">
+                <label style="margin:0 10px;">Source</label>
+                <input type="checkbox" id="source" name="checkbox">
             </div>
-            <div class="chanel-btns">
-                <span class="chanel-close">Close</span>
+            <div class="channel-btns">
+                <span class="channel-close">Close</span>
             </div>
-            <!-- end add chanel  mockup -->
+            <!-- end add channel  mockup -->
         </div>
     </div>
     <!-- end addProject mockup -->
