--- a/addProject.html
+++ b/addProject.html
@@ -104,13 +104,13 @@
                 <input type="text" name="" id="cabinet">
             </div>
             <div><label for="">Ngày</label>
-                <input type="text" name="" id="ngay">
+                <input type="date" name="" id="ngay">
             </div>
             <div class="device-lv">
             </div>
             <div>
-                <label for="loaitb">Loại thiết bị</label>
-                <select id="loaitb" name="loaitb">
+                <label for="loaitb" class="loaitb">Loại thiết bị</label>
+                <select id="loaitb" name="loaitb" class="loaitb">
                     <option value="1k3p">1k3p</option>
                     <option value="6k1p">6k1p</option>
                     <option value="6k3p">6k3p</option>
@@ -146,7 +146,7 @@
             <div><label>SourceFr</label>
                 <input type="text" name="sourceFr" id="">
             </div>
-            <div class="channel-lv">  
+            <div class="channel-lv">
             </div>
             <div class="checkbox">
                 <label style="margin-right: 10px;">includeS</label>
