--- a/addProject.html
+++ b/addProject.html
@@ -27,10 +27,10 @@
         <!-- add project -->
         <div class="addPrj-hd">
             <div class="addPrj-hd-left">
-                <span>Dự án</span>
+                <span >Dự án</span>
                 <input placeholder="Code" type="text">
                 <input placeholder="Tên" type="text">
-                <button class="structure">Structure</button>
+                <span class="structure">Structure</span>
             </div>
             <div class="addPrj-hd-right">
                 <button>Export</button>
