--- a/addProject.html
+++ b/addProject.html
@@ -28,12 +28,12 @@
         <div class="addPrj-hd">
             <div class="addPrj-hd-left">
                 <span >Dự án</span>
-                <input placeholder="Code" type="text">
-                <input placeholder="Tên" type="text">
+                <input id="ProjectName" placeholder="Name" type="text">
+                <input id="ProjectCode" placeholder="Code" type="text">
                 <span class="structure">Structure</span>
             </div>
             <div class="addPrj-hd-right">
-                <button>Export</button>
+                <button class="export">Export</button>
                 <button class="save">Save</button>
             </div>
         </div>
