--- a/addProject.html
+++ b/addProject.html
@@ -57,6 +57,18 @@
                     </div>
                 </div>
 
+                <div class="device-main">
+                    <div class="main-left">
+                        <!-- <img src="./assets/img/left.png" alt=""> -->
+                    </div>
+                    <div class="main-right" style="width:100%">
+                        <canvas class="yourCanvas" width="327px" height="122px" style="border:1px solid #000;"></canvas>
+                        <canvas class="yourCanvas" width="327px" height="122px" style="border:1px solid #000;"></canvas>
+                        <canvas class="yourCanvas" width="327px" height="122px" style="border:1px solid #000;"></canvas>
+
+                    </div>
+                </div>
+
                 <!-- structure mockup -->
                 <div class="structure-mockup hide">
                     <div class="container">
