--- a/addProject.html
+++ b/addProject.html
@@ -56,19 +56,7 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="device-main">
-                    <div class="main-left">
-                        <!-- <img src="./assets/img/left.png" alt=""> -->
-                    </div>
-                    <div class="main-right" style="width:100%">
-                        <canvas class="yourCanvas" width="327px" height="122px" style="border:1px solid #000;"></canvas>
-                        <canvas class="yourCanvas" width="327px" height="122px" style="border:1px solid #000;"></canvas>
-                        <canvas class="yourCanvas" width="327px" height="122px" style="border:1px solid #000;"></canvas>
-
-                    </div>
-                </div>
-
+                  
                 <!-- structure mockup -->
                 <div class="structure-mockup hide">
                     <div class="container">
@@ -155,10 +143,7 @@
                             <div class="col-12">
                                 <div class="card">
                                     <div class="card-header">
-                                        <h4 class="card-title">Chọn Channel</h4>
-                                        <div class="chonch">
-
-                                        </div>
+                                        <h4 class="card-title"></h4>
                                     </div>
                                     <div class="card-content">
                                         <div class="card-body">
@@ -279,6 +264,8 @@
     <script src="./assets/js/app.js"></script>
     <!-- <script src="./assets/js/script.js"></script> -->
     <script src="./assets/js/addproject.js"></script>
+    <script src="./assets/js/channel.js"></script>
+    <script src="./assets/js/structure.js"></script>
 
 </body>
 
