--- a/addProject.html
+++ b/addProject.html
@@ -33,6 +33,7 @@
             </div>
         </div>
     </div>
+
     <div id="main">
         <div id="content">
             <!-- addProject mockup -->
@@ -56,7 +57,87 @@
                         </div>
                     </div>
                 </div>
-                  
+
+                <div class="channel-list" data-info="1231231">
+                    <div class="PhaseA">
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="top"
+                            data-bs-original-title="A11"><img src="./assets/img/test.svg" alt=""><span>01</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="top"
+                            data-bs-original-title="A12"><img src="./assets/img/test.svg" alt=""><span>02</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="top"
+                            data-bs-original-title="A13"><img src="./assets/img/test.svg" alt=""><span>03</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="top"
+                            data-bs-original-title="A14"><img src="./assets/img/test.svg" alt=""><span>04</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="top"
+                            data-bs-original-title="A15"><img src="./assets/img/test.svg" alt=""><span>05</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="top"
+                            data-bs-original-title="A16"><img src="./assets/img/test.svg" alt=""><span>06</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-original-title="A41"><img src="./assets/img/test.svg" alt=""><span>07</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-original-title="A42"><img src="./assets/img/test.svg" alt=""><span>08</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-original-title="A43"><img src="./assets/img/test.svg" alt=""><span>09</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-original-title="A44"><img src="./assets/img/test.svg" alt=""><span>10</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-original-title="A45"><img src="./assets/img/test.svg" alt=""><span>11</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-original-title="A46"><img src="./assets/img/test.svg" alt=""><span>12</span></div>
+                    </div>
+                    <div class="PhaseB">
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="top"
+                            data-bs-original-title="A21"><img src="./assets/img/test.svg" alt=""><span>01</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="top"
+                            data-bs-original-title="A22"><img src="./assets/img/test.svg" alt=""><span>02</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="top"
+                            data-bs-original-title="A23"><img src="./assets/img/test.svg" alt=""><span>03</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="top"
+                            data-bs-original-title="A24"><img src="./assets/img/test.svg" alt=""><span>04</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="top"
+                            data-bs-original-title="A25"><img src="./assets/img/test.svg" alt=""><span>05</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="top"
+                            data-bs-original-title="A26"><img src="./assets/img/test.svg" alt=""><span>06</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-original-title="A51"><img src="./assets/img/test.svg" alt=""><span>07</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-original-title="A52"><img src="./assets/img/test.svg" alt=""><span>08</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-original-title="A53"><img src="./assets/img/test.svg" alt=""><span>09</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-original-title="A54"><img src="./assets/img/test.svg" alt=""><span>10</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-original-title="A55"><img src="./assets/img/test.svg" alt=""><span>11</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-original-title="A56"><img src="./assets/img/test.svg" alt=""><span>12</span></div>
+                    </div>
+                    <div class="PhaseC">
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="top"
+                            data-bs-original-title="A31"><img src="./assets/img/test.svg" alt=""><span>01</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="top"
+                            data-bs-original-title="A32"><img src="./assets/img/test.svg" alt=""><span>02</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="top"
+                            data-bs-original-title="A33"><img src="./assets/img/test.svg" alt=""><span>03</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="top"
+                            data-bs-original-title="A34"><img src="./assets/img/test.svg" alt=""><span>04</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="top"
+                            data-bs-original-title="A35"><img src="./assets/img/test.svg" alt=""><span>05</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="top"
+                            data-bs-original-title="A36"><img src="./assets/img/test.svg" alt=""><span>06</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-original-title="A61"><img src="./assets/img/test.svg" alt=""><span>07</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-original-title="A62"><img src="./assets/img/test.svg" alt=""><span>08</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-original-title="A63"><img src="./assets/img/test.svg" alt=""><span>09</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-original-title="A64"><img src="./assets/img/test.svg" alt=""><span>10</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-original-title="A65"><img src="./assets/img/test.svg" alt=""><span>11</span></div>
+                        <div class="channel" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                            data-bs-original-title="A66"><img src="./assets/img/test.svg" alt=""><span>12</span></div>
+                    </div>
+                </div>
                 <!-- structure mockup -->
                 <div class="structure-mockup hide">
                     <div class="container">
