--- a/addProject.html
+++ b/addProject.html
@@ -204,7 +204,6 @@
                                                                 <input type="checkbox" id="includeS"
                                                                     class='form-check-input'>
                                                                 <label for="checkbox5">includeS</label>
-
                                                             </div>
                                                         </div>
                                                         <div class="checkbox">
@@ -277,7 +276,7 @@
     <script src="./assets/js/addproject.js"></script>
     <script src="./assets/js/channel.js"></script>
     <script src="./assets/js/structure.js"></script>
-
+    <script src="./assets/js/export.js"></script>
 </body>
 
 </html>
