update click event

--- a/management/management.html
+++ b/management/management.html
@@ -157,5 +157,6 @@
     <script src="./assets/js/management.js"></script>
     <script src="./assets/js/heatmap.js"></script>
     <script src="./assets/js/api.js"></script>
+    <script src="./assets/js/diagram.js"></script>
   </body>
 </html>
