--- a/management/management.html
+++ b/management/management.html
@@ -121,21 +121,19 @@
                 </div>
                 <div class="row">
                   <div class="col-4">
-                    <div class="card">
-                        <h6>Nhà máy VLXD</h6>
-                      <img src="./assets/img/test3.png" alt="">
+                    <div class="card" id="Loadfactor">
+                        <h6>Load factor</h6>
+                      
                     </div>
                   </div>
                   <div class="col-4">
-                    <div class="card">
-                        <h6>Nhà máy VLXD</h6>
-                      <img src="./assets/img/test3.png" alt="">
+                    <div class="card" id="current">
+                        <h6>current</h6>
                     </div>
                   </div>
                   <div class="col-4">
-                    <div class="card">
+                    <div class="card" id = "power">
                         <h6>Nhà máy VLXD</h6>
-                      <img src="./assets/img/test3.png" alt="">
                     </div>
                   </div>
                 </div>
@@ -156,6 +154,7 @@
     <script src="./assets/js/element.js"></script>
     <script src="./assets/js/management.js"></script>
     <script src="./assets/js/heatmap.js"></script>
+    <script src="./assets/js/chart.js"></script>
     <script src="./assets/js/api.js"></script>
     <script src="./assets/js/diagram.js"></script>
   </body>
