--- a/management/management.html
+++ b/management/management.html
@@ -128,12 +128,12 @@
                   </div>
                   <div class="col-4">
                     <div class="card" id="current">
-                        <h6>current</h6>
+                        <h6>Current</h6>
                     </div>
                   </div>
                   <div class="col-4">
                     <div class="card" id = "power">
-                        <h6>Nhà máy VLXD</h6>
+                        <h6>Power</h6>
                     </div>
                   </div>
                 </div>
@@ -154,7 +154,6 @@
     <script src="./assets/js/element.js"></script>
     <script src="./assets/js/management.js"></script>
     <script src="./assets/js/heatmap.js"></script>
-    <script src="./assets/js/chart.js"></script>
     <script src="./assets/js/api.js"></script>
     <script src="./assets/js/diagram.js"></script>
   </body>
